# a2ui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_EN.md  clippy.toml  justfile  release.toml  rustfmt.toml
a2ui-json/: 1.json
crates/a2ui/: Cargo.toml  README.md  README_EN.md
crates/a2ui/examples/: 01_hello_world.rs  02_jsonl_stream.rs  03_data_binding.rs  04_login_form.rs  05_custom_function.rs  06_call_function.rs  07_action_response.rs  07b_action_response_debug.rs  07c_card_minimal.rs  08_agent_chat.rs  09_interactive_form.rs  10_template_list.rs  11_tabs_and_modals.rs  12_handshake.rs  13_image.rs  14_audio.rs  15_date_time_input.rs  16_custom_component.rs  17_scifi_hud.rs  18_validate.rs  19_capitalized_text.rs
crates/a2ui/src/: lib.rs  main.rs
crates/bevy/: Cargo.toml  README.md  README_EN.md
crates/bevy-gallery/: Cargo.toml  README.md  README_EN.md
crates/bevy-gallery/src/: main.rs
crates/bevy/examples/: 08_agent_chat.rs  17_scifi_hud.rs
crates/bevy/src/: images.rs  interaction.rs  lib.rs  plugin.rs  reconcile.rs  render.rs  sample_browser.rs  state.rs
crates/core/: Cargo.toml  README.md  README_EN.md
crates/core/src/: capabilities.rs  error.rs  event.rs  focus.rs  interaction.rs  lib.rs  message_processor.rs
crates/core/src/catalog/: basic_functions.rs  catalog.rs  component_api.rs  function_api.rs  mod.rs  registry.rs  schema_only.rs
crates/core/src/components/: button.rs  checkbox.rs  mod.rs  slider.rs  text_field.rs
crates/core/src/model/: component_context.rs  component_model.rs  components_model.rs  data_context.rs  data_model.rs  mod.rs  surface_group_model.rs
crates/core/src/observable/: event_stream.rs  mod.rs  signal.rs
crates/core/src/protocol/: common_types.rs  mod.rs
crates/core/src/validate/: config.rs  error.rs  integrity.rs  mod.rs  payload_fixer.rs  ref_fields.rs  topology.rs
crates/dioxus/: Cargo.toml  README.md  README_EN.md
crates/dioxus-gallery/: Cargo.toml  README.md  README_EN.md
crates/dioxus-gallery/src/: main.rs
crates/dioxus/examples/: 08_agent_chat.rs  17_scifi_hud.rs
crates/dioxus/src/: app.rs  lib.rs  node.rs  theme.rs
crates/egui/: Cargo.toml  README.md  README_EN.md
crates/egui-gallery/: Cargo.toml  README.md  README_EN.md
crates/egui-gallery/src/: main.rs
crates/egui/examples/: 08_agent_chat.rs  17_scifi_hud.rs
crates/egui/src/: app.rs  components.rs  edit_state.rs  images.rs  interaction.rs  lib.rs  walker.rs
crates/gallery/: Cargo.toml  README.md  README_EN.md
crates/gallery/examples/: json_gallery.rs
crates/gallery/src/: app.rs  config.rs  lib.rs  main.rs  sample_loader.rs
crates/gallery/tests/: e2e.rs
crates/iced/: Cargo.toml  README.md  README_EN.md
crates/iced-gallery/: Cargo.toml  README.md  README_EN.md
crates/iced-gallery/src/: main.rs
crates/iced/examples/: 08_agent_chat.rs  17_scifi_hud.rs
crates/iced/src/: app.rs  components.rs  lib.rs  message.rs  style.rs  walker.rs
crates/iced/tests/: render_smoke.rs
crates/image/: Cargo.toml
crates/image/src/: lib.rs
crates/ratatui-css/: Cargo.toml  README.md  design.md
crates/ratatui-css/examples/: cascade.rs  dashboard.rs  live_demo.rs  render.rs  scifi_hud.rs  stylesheet.rs  themekit_bridge.rs  values.rs
crates/ratatui-css/src/: error.rs  lib.rs  style.rs
crates/slint/: Cargo.toml  README.md  README_EN.md  build.rs
crates/slint-gallery/: Cargo.toml  README.md  README_EN.md
crates/slint-gallery/src/: main.rs
crates/slint/examples/: 08_agent_chat.rs  17_scifi_hud.rs
crates/slint/src/: host.rs  lib.rs  live_tree.rs  ui.rs
crates/tui/: Cargo.toml  README.md  README_EN.md
crates/tui/src/: agent_chat.rs  component_impl.rs  focus_manager.rs  interaction.rs  layout_engine.rs  lib.rs  surface.rs
crates/tui/src/catalogs/: basic.rs  minimal.rs
crates/tui/src/components/: audio_player.rs  button.rs  card.rs  checkbox.rs  choice_picker.rs  column.rs  date_time_input.rs  divider.rs  generic.rs  icon.rs  image.rs  list.rs  mod.rs  modal.rs  row.rs  slider.rs  tabs.rs  text.rs  text_field.rs  video.rs
examples/: 01_hello_world.rs  02_jsonl_stream.rs  03_data_binding.rs  04_login_form.rs  05_custom_function.rs  06_call_function.rs  07_action_response.rs  07b_action_response_debug.rs  07c_card_minimal.rs  08_agent_chat.rs  09_interactive_form.rs  10_template_list.rs  11_tabs_and_modals.rs  14_audio.rs  15_date_time_input.rs  16_custom_component.rs  17_scifi_hud.rs
scripts/: capture_bevy_screenshot.sh  capture_egui_screenshot.sh  capture_slint_screenshot.sh
src/: lib.rs  main.rs
src/core/: capabilities.rs  error.rs  message_processor.rs  mod.rs
src/core/catalog/: basic_functions.rs  component_api.rs  function_api.rs  mod.rs  schema_only.rs
src/core/model/: component_context.rs  component_model.rs  components_model.rs  data_context.rs  data_model.rs  surface_group_model.rs  surface_model.rs
src/core/protocol/: client_to_server.rs  common_types.rs  mod.rs  server_to_client.rs
src/gallery/: app.rs  sample_loader.rs
src/tui/: component_impl.rs  focus_manager.rs  interaction.rs  layout_engine.rs  mod.rs  surface.rs
src/tui/catalogs/: basic.rs  minimal.rs
src/tui/components/: audio_player.rs  button.rs  card.rs  checkbox.rs  choice_picker.rs  column.rs  date_time_input.rs  divider.rs  generic.rs  icon.rs  image.rs  list.rs  mod.rs  modal.rs  row.rs  slider.rs  tabs.rs  text.rs  text_field.rs  video.rs
