[workspace]
resolver = "3"
members = ["crates/core", "crates/tui", "crates/gallery", "crates/a2ui", "crates/slint", "crates/slint-gallery"]
# `cargo build` / `cargo run` with no `-p` only compile the ratatui stack. The
# Slint backend (`a2ui-slint`) is opt-in: it pulls a sizeable GUI toolchain, so
# it is excluded from the default build and built explicitly with
# `cargo build -p a2ui-slint --features backend`.
default-members = ["crates/core", "crates/tui", "crates/gallery", "crates/a2ui"]

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["Liangdi <wu@liangdi.me>"]
license = "MIT"
repository = "https://github.com/Liangdi/a2ui"

[workspace.dependencies]
# External crates — versions centralized here, consumed via `{ workspace = true }`.
ratatui = "0.30.1"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
regex = "1"
unicode-width = "0.2"
ratatui-image = "11"
image = "0.25"
# Embed the A2UI specification tree into the binary at compile time so the
# gallery is self-contained and distributable (no on-disk spec dir needed).
include_dir = "0.7"
rodio = "0.22"
# Slint runtime for the `a2ui-slint` backend. `default-features = false` + `std`
# give the core types (SharedString, Model, the `slint!` macro) without committing
# to a windowing backend — consumers pick a renderer (e.g. `renderer-femtovg`,
# `renderer-software`) when launching.
slint = { version = "1.16", default-features = false, features = ["std", "compat-1-2"] }
# Build-time compiler: turns `.slint` files into Rust modules via `slint_build`
# in `build.rs`. (The inline `slint::slint!` macro rejects recursive components,
# so the backend compiles real `.slint` files instead.)
slint-build = { version = "1.16" }

# Internal crates — path dependencies shared across the workspace. Each carries
# a `version` (the workspace package version) so `cargo publish` can resolve them
# against crates.io (the `path` is stripped on publish). Consumers use
# `{ workspace = true }` and inherit both.
a2ui-base = { path = "crates/core", version = "0.2.1" }
a2ui-tui = { path = "crates/tui", version = "0.2.1" }
a2ui-gallery = { path = "crates/gallery", version = "0.2.1" }
a2ui-slint = { path = "crates/slint", version = "0.2.1" }

# --- Release profile: optimize for binary size --------------------------------
# The gallery embeds the full spec tree, so we trim the distributed binary.
# `cargo build --release` applies these. Trade slower compile for a smaller,
# self-contained executable.
[profile.release]
# "z" optimizes purely for size (smaller than "s", which keeps some speed).
opt-level = "z"
# Whole-program link-time optimization: eliminates dead code across crates.
lto = true
# One codegen unit → more inlining/dead-code elimination (slower compile).
codegen-units = 1
# Abort instead of unwind on panic: drops unwinding machinery. NOTE: panics no
# longer unwind, so Drop destructors don't run during a panic.
panic = "abort"
# Strip debug symbols from the binary.
strip = true
