[package]
name = "a2ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A2UI (Agent to UI) — render JSON streaming UIs authored by AI agents (ratatui + Slint backends)"

[features]
default = []
# Forwarded to the tui backend. Required to build the 14_audio example.
audio = ["a2ui-tui/audio"]
# Expose the Slint backend as `a2ui::slint`. Opt-in: pulls the Slint runtime
# (heavy). Without it the umbrella only re-exports core + tui.
slint = ["dep:a2ui-slint"]

[dependencies]
a2ui-base = { workspace = true }
a2ui-tui = { workspace = true }
# Optional: the Slint backend, re-exported as `a2ui::slint` under the `slint`
# feature. The inner `backend` feature is what actually links the Slint runtime.
a2ui-slint = { workspace = true, optional = true, features = ["backend"] }

# Examples directly use these crates (the umbrella only re-exports core+tui).
[dev-dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "13_image"

[[example]]
name = "14_audio"
required-features = ["audio"]
