[package]
name = "a2ui-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bevy ECS UI backend for A2UI (Agent to UI)"

[features]
default = []
# Pull in the Bevy runtime + the external text-input widget. OFF by default so
# the workspace's default build stays light (Bevy's wgpu + windowing toolchain
# is sizable). Enable with `--features backend`.
#
# The workspace `bevy` dep is already configured with the minimal UI feature set
# (layout, text, windowing via winit, picking, input focus, the experimental
# `bevy_ui_widgets` headless widgets, and the wgpu UI render path).
backend = ["dep:bevy", "dep:bevy_ui_text_input"]

[dependencies]
a2ui-base = { workspace = true }
serde_json = { workspace = true }
# Optional: the Bevy runtime (UI stack only — see the workspace dep comment).
bevy = { workspace = true, optional = true }
# Optional: external text-input widget (Bevy 0.18 has no first-party one).
bevy_ui_text_input = { workspace = true, optional = true }

[dev-dependencies]
# Examples read live values out of the data model and render them with Bevy's
# native UI directly (not via the a2ui-bevy reconciler — the layout *is* the
# Bevy entity tree; only the data flows through the protocol). `a2ui-tui`
# provides `build_basic_catalog`; `bevy` is the optional runtime dep made
# available to examples via the `backend` feature (its workspace feature set
# already pulls the UI stack: bevy_ui, bevy_text, bevy_winit, ui_bevy_render,
# default_font, ui_picking, ...).
a2ui-tui = { workspace = true }
bevy = { workspace = true }

[[example]]
name = "17_scifi_hud"
# Needs the real Bevy runtime (wgpu + winit) to open a window.
required-features = ["backend"]
