[package]
name = "a2ui-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bevy ECS UI backend for A2UI (Agent to UI)"

[features]
default = []
# Pull in the Bevy runtime + the external text-input widget. OFF by default so
# the workspace's default build stays light (Bevy's wgpu + windowing toolchain
# is sizable). Enable with `--features backend`.
#
# The workspace `bevy` dep is already configured with the minimal UI feature set
# (layout, text, windowing via winit, picking, input focus, the experimental
# `bevy_ui_widgets` headless widgets, and the wgpu UI render path). `a2ui-image`
# resolves + decodes `Image` component sources (http / data: / file://) shared
# with the other backends; the crate-local `images.rs` wraps the RGBA into a
# Bevy texture.
backend = ["dep:bevy", "dep:a2ui-image"]

[dependencies]
a2ui-base = { workspace = true }
serde_json = { workspace = true }
# Optional: the Bevy runtime (UI stack only — see the workspace dep comment).
bevy = { workspace = true, optional = true }
# Optional: shared image source resolution + raster decode (http / data: /
# file:// → RGBA) for the `Image` component, mirroring the other backends.
a2ui-image = { workspace = true, optional = true }

[dev-dependencies]
# Examples read live values out of the data model and render them with Bevy's
# native UI directly (not via the a2ui-bevy reconciler — the layout *is* the
# Bevy entity tree; only the data flows through the protocol). `a2ui-tui`
# provides `build_basic_catalog`; `bevy` is the optional runtime dep made
# available to examples via the `backend` feature (its workspace feature set
# already pulls the UI stack: bevy_ui, bevy_text, bevy_winit, ui_bevy_render,
# default_font, ui_picking, ...).
a2ui-tui = { workspace = true }
bevy = { workspace = true }

[[example]]
name = "17_scifi_hud"
# Needs the real Bevy runtime (wgpu + winit) to open a window.
required-features = ["backend"]

[[example]]
name = "08_agent_chat"
# Needs the real Bevy runtime (wgpu + winit) to open a window.
required-features = ["backend"]

[lints]
workspace = true
