[package]
name = "a2ui-base"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Framework-agnostic base for A2UI (Agent to UI): protocol, models, and catalog"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
