[package]
name = "a2ui-egui-gallery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A2UI gallery — browse and render the sample specs in an egui window"

[[bin]]
name = "a2ui_egui_gallery"
path = "src/main.rs"

[dependencies]
a2ui-base = { workspace = true }
a2ui-tui = { workspace = true }          # build_basic_catalog / build_minimal_catalog
a2ui-gallery = { workspace = true }      # sample_loader
# The `backend` feature enables the egui windowing backend (winit + glow).
# Without it `EguiApp` has no runtime, so it is required for this binary.
a2ui-egui = { workspace = true, features = ["backend"] }
eframe = { workspace = true }
egui = { workspace = true }
serde_json = { workspace = true }
