[package]
name = "a2ui-egui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "egui immediate-mode GUI backend for A2UI (Agent to UI)"

[features]
default = []
# Pull in the real egui runtime + eframe windowing backend. OFF by default so the
# workspace's default build stays light (egui brings winit + glow). Enable with
# `--features backend`.
#
# `eframe/glow` + `eframe/default_fonts`: a windowed backend using the OpenGL
# (glow) renderer. eframe's own `default` feature set (carried via the workspace
# dep) supplies the winit X11/Wayland backends; we just opt into the glow
# renderer + default fonts explicitly here. Swap in `eframe/wgpu` later if GPU
# acceleration is wanted. The `image` crate decodes raster `Image` components to
# egui textures; `ureq` fetches remote `http(s)` image URLs (blocking, on the UI
# thread — matching the Slint/Bevy backends; the gallery samples carry only a
# handful of small images).
backend = [
    "dep:egui",
    "dep:eframe",
    "dep:image",
    "dep:ureq",
    "eframe/glow",
    "eframe/default_fonts",
]

[dependencies]
a2ui-base = { workspace = true }
serde_json = { workspace = true }
# Optional: the egui runtime. `default-features = false` keeps the surface
# minimal. A windowing backend/renderer is selected by the `backend` feature.
egui = { workspace = true, optional = true }
eframe = { workspace = true, optional = true }
# Optional: raster image decoding for the `Image` component (PNG / JPEG / … →
# egui `ColorImage`/`TextureHandle`), mirroring the Bevy/Iced/Slint backends.
image = { workspace = true, optional = true }
# Optional: sync HTTP client for remote `http(s)` `Image` URLs (same version the
# Iced / Slint backends use).
ureq = { workspace = true, optional = true }

[dev-dependencies]
# Examples read live values out of the data model and render them with egui
# widgets directly. `a2ui-tui` provides `build_basic_catalog`; `egui`/`eframe`/
# `image` are the optional runtime deps made available to examples via the
# `backend` feature (same pattern as the Iced/Bevy/Slint examples).
a2ui-tui = { workspace = true }

[[example]]
name = "17_scifi_hud"
# Needs the real egui runtime (eframe + glow) to open a window.
required-features = ["backend"]
