[package]
name = "a2ui-egui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "egui immediate-mode GUI backend for A2UI (Agent to UI)"

[features]
default = []
# Pull in the real egui runtime + eframe windowing backend. OFF by default so the
# workspace's default build stays light (egui brings winit + glow). Enable with
# `--features backend`.
#
# `eframe/glow` + `eframe/default_fonts`: a windowed backend using the OpenGL
# (glow) renderer. eframe's own `default` feature set (carried via the workspace
# dep) supplies the winit X11/Wayland backends; we just opt into the glow
# renderer + default fonts explicitly here. Swap in `eframe/wgpu` later if GPU
# acceleration is wanted. `a2ui-image` resolves + decodes `Image` component
# sources (http / data: / file://) shared with the other backends.
backend = [
    "dep:egui",
    "dep:eframe",
    "dep:a2ui-image",
    "eframe/glow",
    "eframe/default_fonts",
]

[dependencies]
a2ui-base = { workspace = true }
serde_json = { workspace = true }
# Optional: the egui runtime. `default-features = false` keeps the surface
# minimal. A windowing backend/renderer is selected by the `backend` feature.
egui = { workspace = true, optional = true }
eframe = { workspace = true, optional = true }
# Optional: shared image source resolution + raster decode (http / data: /
# file:// → RGBA) used by the `Image` component, mirroring the Bevy/Iced/Slint
# backends. The crate-local `images.rs` wraps the result into a `ColorImage`.
a2ui-image = { workspace = true, optional = true }

[dev-dependencies]
# Examples read live values out of the data model and render them with egui
# widgets directly. `a2ui-tui` provides `build_basic_catalog`; `egui`/`eframe`
# are the optional runtime deps made available to examples via the `backend`
# feature (same pattern as the Iced/Bevy/Slint examples). The standalone
# `image` crate is used directly by the `17_scifi_hud` in-app screenshot
# capture (`image::RgbaImage::from_raw`), independent of the backend's decode.
a2ui-tui = { workspace = true }
image = { workspace = true }

[[example]]
name = "17_scifi_hud"
# Needs the real egui runtime (eframe + glow) to open a window.
required-features = ["backend"]

[[example]]
name = "08_agent_chat"
# Needs the real egui runtime (eframe + glow) to open a window.
required-features = ["backend"]

[lints]
workspace = true
