[package]
name = "a2ui-gallery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A2UI gallery — browse and render the sample specs (ratatui backend)"

# Note: lib/bin *target* names must use underscores (Cargo rule); the package
# name keeps its hyphen. The lib is exposed so the e2e integration test
# (tests/e2e.rs) can reach `a2ui_gallery::sample_loader`.
[lib]
name = "a2ui_gallery"
path = "src/lib.rs"

[[bin]]
name = "a2ui_gallery"
path = "src/main.rs"

[dependencies]
a2ui-base = { workspace = true }
a2ui-tui = { workspace = true }
ratatui = { workspace = true }
ratatui-sci-fi = "0.2"
crossterm = { workspace = true }
uuid = { workspace = true }
include_dir = { workspace = true }
serde_json = { workspace = true }
# Persisted user config (image-protocol choice). `serde` for the config struct
# derive, `toml` for the editable file format, `dirs` for the config path.
serde = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
